[package]
name = "ppm"
version = "0.1.0"
authors = ["Luis Valdez <luis.valdez@affluences.com>", "Zineddine Boudaoud <zinedddine97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ppm"
crate-type = ["dylib"]

[dependencies]
