[package]
name = "call_lib"
version = "0.1.0"
authors = ["Luis Valdez <luis.valdez@affluences.com>", "Zineddine Boudaoud <zinedddine97@gmail.com>", "Patrick Zhuang <patrickzhuang@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ppm = { path = "../libppm"}